fix play pause button on safari, change install prompt, change boat on footer

--- a/views/components/map/_map.scss
+++ b/views/components/map/_map.scss
@@ -177,8 +177,8 @@
 	-webkit-appearance: none;
 	background: none;
 	border: 0;
-	width: 3rem;
-	height: 3rem;
+	width: 3.5rem;
+	height: 3.5rem;
 	z-index: z('play-pause');
 	cursor: pointer;
 	transition: transform 150ms ease-out;
